@@ -52,6 +52,7 @@ struct r_queue_item {
     int source;		/* original receiver thread id */
     int destination;	/* destination thread, if we know it */
 
+    char *routing_info;	/* optional extra information for router module */
     void *client_data;	/* the original data (NOTE: just a pointer) */
     
     RQueueItem *next;	/* linked list */
@@ -138,14 +139,15 @@ time_t rq_last_mod(RQueue *queue);
 /*-------------------------------------------------------
  * RQueueItem
  *
- * create a new rqueue item - note that client_data is unaffected
+ * create a new rqueue item - note that you must afterwards set
+ * 'msg', 'routing_info' and 'client_data' if used
  */
 RQueueItem *rqi_new(int class, int type);
 
 /*
  * delete rqueue item
  * NOTE: does not remove it from the RQueue, so you must have done it first!
- *   ..and does NOT free client data!
+ * Frees 'msg' and 'routing_info', but does NOT free client-data
  */
 void rqi_delete(RQueueItem *msg);
 
